tests/137_unknown_type_errors.pirx
// All type names must be declared, including those used behind pointers and slices.
struct Node {
  next: *Missing;
  items: []Gone;
}

func takesUnknown(a: Mystery): int {
  return 0;
}

func main(): int {
  var x: Undeclared;
  var p = new(int, 5);
  return 0;
}
